# Chess

./: .gitignore  CMakeLists.txt  Makefile  README.md  control
include/: Bishop.hpp  Board.hpp  Bot.hpp  Bots.h  Chess.h  Chess.hpp  Game.hpp  King.hpp  Knight.hpp  MinimaxBot.hpp  Move.hpp  NeuralBot.hpp  Pawn.hpp  Piece.hpp  PieceType.hpp  Player.hpp  Point.hpp  Queen.hpp  Rook.hpp  Winner.hpp
src/: Bishop.cpp  Board.cpp  Bots.cpp  Chess.cpp  Game.cpp  King.cpp  Knight.cpp  MinimaxBot.cpp  Move.cpp  NeuralBot.cpp  Pawn.cpp  Point.cpp  Queen.cpp  Rook.cpp
tests/: ConsoleChess.cpp
